Change Edit Text to TextView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,23 +15,15 @@
         tools:context=".ui.main.MainActivity">
 
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etLayoutMemberId"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/member_id">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etMemberId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:text="Member ID"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvState"
+            android:id="@+id/tvMemberId"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
